--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@next/font": "^13.0.5",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "framer-motion": "^7.7.2",
     "next": "latest",
     "react": "18.2.0",
@@ -22,6 +24,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
+    "tailwindcss-nested-groups": "^1.2.4",
     "typescript": "4.8.4"
   }
 }
